--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prepare": "husky"
   },
   "dependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
+    "husky": "^9.1.7",
     "react": "19.0.0",
     "react-native": "0.79.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@biomejs/biome": "2.1.2",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "ultracite": "5.1.2"
   },
   "private": true
 }
