--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,8 +1,6 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
-  "extends": [
-    "ultracite"
-  ],
+  "extends": ["ultracite"],
   "javascript": {
     "formatter": {
       "quoteStyle": "single",
@@ -12,9 +10,7 @@
     }
   },
   "files": {
-    "includes": [
-      "./src/**/*"
-    ],
+    "includes": ["./src/**/*"],
     "ignoreUnknown": true
   },
   "css": {
