--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "husky": "^9.1.7",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@biomejs/biome": "2.1.2",
     "@types/react": "~19.0.10",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "ultracite": "5.1.2"
   },
