--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "husky": "^9.1.7",
+    "lucide-react-native": "^0.536.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
