--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@expo-google-fonts/inter": "^0.4.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~53.0.20",
     "expo-font": "~13.3.2",
