chore(main): update logo assets and replace SVG with PNG format

--- a/app.json
+++ b/app.json
@@ -4,12 +4,13 @@
     "slug": "waiter-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo.png",
+    "backgroundColor": "#d73035",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/logo.svg",
-      "resizeMode": "contain",
+      "image": "./assets/logo.png",
+      "resizeMode": "cover",
       "backgroundColor": "#d73035"
     },
     "ios": {
@@ -17,7 +18,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/logo.svg",
+        "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#d73035"
       },
       "edgeToEdgeEnabled": true
@@ -25,6 +26,8 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-font"]
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
