--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@expo-google-fonts/inter": "^0.4.1",
+    "@tanstack/react-query": "^5.84.2",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~53.0.20",
@@ -27,7 +29,8 @@
     "react-native": "0.79.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "zod": "^4.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
