--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,6 +1,8 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
-  "extends": ["ultracite"],
+  "extends": [
+    "ultracite"
+  ],
   "javascript": {
     "formatter": {
       "quoteStyle": "single",
@@ -37,7 +39,8 @@
         "noImgElement": "off"
       },
       "correctness": {
-        "useHookAtTopLevel": "off"
+        "useHookAtTopLevel": "off",
+        "useExhaustiveDependencies": "off"
       },
       "complexity": {
         "noStaticOnlyClass": "off"
