--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "^54.0.25",
+    "expo": "~53.0.20",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -26,7 +27,7 @@
     "lucide-react-native": "^0.536.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.81.4",
+    "react-native": "0.79.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-svg": "15.11.2",
