--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build:dev:android": "eas build --profile development --platform android",
+    "build:dev:ios": "eas build --profile development --platform ios",
+    "build:dev": "eas build --profile development --platform all"
   },
   "dependencies": {
     "@commitlint/cli": "^19.8.1",
